Update About section with animated tech elements and improve Programmatic card icon

--- a/index.html
+++ b/index.html
@@ -44,23 +44,75 @@
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">Transform Your Business with Mobile Solutions</h1>
+                <div class="hero-badge">
+                    <i class="fas fa-robot"></i>
+                    <span>AI-Powered</span>
+                </div>
+                <h1 class="hero-title">Next-Gen Mobile Performance Marketing</h1>
                 <p class="hero-subtitle">Your Trusted Partner in Mobile Subscription & CPL Performance Marketing</p>
+                <div class="hero-stats">
+                    <div class="stat-item">
+                        <span class="stat-number">10K+</span>
+                        <span class="stat-label">Exclusive Offers</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-number">350K+</span>
+                        <span class="stat-label">Daily Conversions</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-number">24/7</span>
+                        <span class="stat-label">AI Optimization</span>
+                    </div>
+                </div>
                 <div class="hero-buttons">
-                    <a href="#services" class="btn btn-primary">Top Verticals</a>
-                    <a href="#contact" class="btn btn-secondary">Get Free Consultation</a>
+                    <a href="#services" class="btn btn-primary">
+                        <i class="fas fa-rocket"></i>
+                        Explore Verticals
+                    </a>
+                    <a href="#contact" class="btn btn-secondary">
+                        <i class="fas fa-chart-line"></i>
+                        Get Free Consultation
+                    </a>
                 </div>
             </div>
-            <div class="hero-image">
-                <img src="https://images.unsplash.com/photo-1519003722824-194d4455a60c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Modern City Nightscape" class="hero-background-image">
-                <div class="hero-overlay">
-                    <div class="hero-graphic">
-                        <i class="fas fa-mobile-alt"></i>
-                        <i class="fas fa-chart-line"></i>
-                        <i class="fas fa-globe"></i>
+            <div class="hero-visual">
+                <div class="hero-graphics">
+                    <div class="floating-element element-1">
+                        <i class="fas fa-brain"></i>
+                    </div>
+                    <div class="floating-element element-2">
+                        <i class="fas fa-microchip"></i>
+                    </div>
+                    <div class="floating-element element-3">
+                        <i class="fas fa-network-wired"></i>
+                    </div>
+                    <div class="floating-element element-4">
+                        <i class="fas fa-cube"></i>
+                    </div>
+                    <div class="floating-element element-5">
+                        <i class="fas fa-atom"></i>
+                    </div>
+                    <div class="floating-element element-6">
+                        <i class="fas fa-satellite"></i>
+                    </div>
+                </div>
+                <div class="hero-center">
+                    <div class="hero-logo">
+                        <div class="logo-circle">
+                            <i class="fas fa-robot"></i>
+                        </div>
+                        <div class="logo-rings">
+                            <div class="ring ring-1"></div>
+                            <div class="ring ring-2"></div>
+                            <div class="ring ring-3"></div>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="hero-background">
+            <div class="grid-overlay"></div>
+            <div class="particles"></div>
         </div>
     </section>
 
@@ -97,7 +149,27 @@
                 </div>
                 <div class="about-image">
                     <div class="about-graphic">
-                        <i class="fas fa-users"></i>
+                        <div class="tech-element tech-1">
+                            <i class="fas fa-chart-line"></i>
+                        </div>
+                        <div class="tech-element tech-2">
+                            <i class="fas fa-cogs"></i>
+                        </div>
+                        <div class="tech-element tech-3">
+                            <i class="fas fa-network-wired"></i>
+                        </div>
+                        <div class="tech-element tech-4">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <div class="tech-element tech-5">
+                            <i class="fas fa-brain"></i>
+                        </div>
+                        <div class="tech-element tech-6">
+                            <i class="fas fa-microchip"></i>
+                        </div>
+                        <div class="center-orb">
+                            <i class="fas fa-robot"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -196,10 +268,10 @@
                 </div>
                 <div class="traffic-card">
                     <div class="traffic-icon">
-                        <i class="fas fa-chart-network"></i>
+                        <i class="fas fa-robot"></i>
                     </div>
                     <h3>Programmatic</h3>
-                    <p>Automated buying across multiple platforms for optimal performance</p>
+                    <p>AI-powered automated buying across multiple platforms for optimal performance</p>
                 </div>
                 <div class="traffic-card">
                     <div class="traffic-icon">
